--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "scripts": {
     "dev:prepare": "unbuild --stub",
+    "prepare": "unbuild",
     "build": "unbuild",
     "test": "vitest dev",
     "test:integration": "jest",
