--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "dev:prepare": "unbuild --stub",
